# openscopeproject.github.io

./: .gitignore  .gitmodules  CNAME  README.md  _config.yml  hugo.yml  package-lock.json  package.hugo.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml
.github/workflows/: github_pages.yml  hugo.yml  pelican.yml
.well-known/: org.flathub.VerifiedApps.txt
config/_default/: author.yaml  config.yaml  params.yaml
content/: index.md
content/about/: index.md
content/pages/: trguing.md
content/projects/: hp34401a_mod.md  interactivehtmlbom.md  keithley1950.md  multiscreensaver.md  transformit.md  trguing.md  ziprofs.md
content/static/: custom.css
