[tool.poetry]
name = "openscopeproject-github-io"
version = "0.1.0"
description = "OSP website"
authors = ["qu1ck <anlutsenko@gmail.com>"]
license = "CC-BY-SA-4.0"
readme = "README.md"
packages = [{include = "openscopeproject"}]

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.9.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
